Pinguino IDE 11.0.1
-------------------

xxxxxx --, 2014

Features

* Added language support
* Added Spanish translation by Yeison Cardona
* Added Japanesse translation by "avrin"

Improves

* Menu sorted
* Dialogues centered on the screen

Bug Fixes

* Fixed clear and restart commands in python shell
* Fixed historial commands in python shell


##################################################

Pinguino IDE 11.0.0
-------------------

March 28, 2014

Features

* Updated and improved GUI based on Qt via PySide
* Added Python shell
* Added library manager
* Added hex viewer
* Added graphic development interface