@@ -34,7 +34,6 @@ class Methods(SearchReplace):
         elif filename.endswith(".pde"):
             self.switch_ide_mode(False)
 
-
         self.new_file(filename=filename)
         editor = self.main.tabWidget_files.currentWidget()
         #pde_file = open(path, mode="r")
@@ -46,6 +45,7 @@ class Methods(SearchReplace):
         setattr(editor, "last_saved", content)
         self.main.tabWidget_files.setTabToolTip(self.main.tabWidget_files.currentIndex(), filename)
         self.main.tabWidget_files.setTabText(self.main.tabWidget_files.currentIndex(), os.path.split(filename)[1])
+        self.check_backup_file(editor=editor)
         self.tab_changed()
 
 
@@ -201,6 +201,7 @@ class Methods(SearchReplace):
     #----------------------------------------------------------------------
     @Decorator.connect_features()
     def __save_file__(self, *args, **kwargs):
+
         editor = kwargs.get("editor", self.get_tab())
         content = editor.text_edit.toPlainText()
         #pde_file = open(editor.path, mode="w")
@@ -208,11 +209,22 @@ class Methods(SearchReplace):
         pde_file.write(content)
         pde_file.close()
         setattr(editor, "last_saved", content)
+        self.__remove_backup_file__(editor=editor)
         self.__text_saved__()
+
+    #----------------------------------------------------------------------
+    def __remove_backup_file__(self, *args, **kwargs):
+
+        editor = kwargs.get("editor", self.get_tab())
+        filename = getattr(editor, "path", None)
+        filename_backup = filename + "~"
+        if os.path.exists(filename_backup):
+            os.remove(filename_backup)
 
 
     #----------------------------------------------------------------------
     def __get_name__(self, ext=".pde"):
+
         index = 1
         name = "untitled-%d" % index + ext
         #filenames = [self.main.tabWidget_files.tabText(i) for i in range(self.main.tabWidget_files.count())]
@@ -225,6 +237,7 @@ class Methods(SearchReplace):
 
     #----------------------------------------------------------------------
     def __text_changed__(self, *args, **kwargs):
+
         index = self.main.tabWidget_files.currentIndex()
         filename = self.main.tabWidget_files.tabText(index)
         if not filename.endswith("*"):
@@ -235,6 +248,7 @@ class Methods(SearchReplace):
 
     #----------------------------------------------------------------------
     def __text_saved__(self, *args, **kwargs):
+
         index = self.get_tab().currentIndex()
         filename = self.get_tab().tabText(index)
         if filename.endswith("*"):
@@ -244,6 +258,7 @@ class Methods(SearchReplace):
 
     #----------------------------------------------------------------------
     def __text_can_undo__(self, *args, **kwargs):
+
         state = not self.main.actionUndo.isEnabled()
         self.main.actionUndo.setEnabled(state)
         editor = self.main.tabWidget_files.currentWidget()
@@ -252,6 +267,7 @@ class Methods(SearchReplace):
 
     #----------------------------------------------------------------------
     def __text_can_redo__(self, *args, **kwargs):
+
         state = not self.main.actionRedo.isEnabled()
         self.main.actionRedo.setEnabled(state)
         editor = self.main.tabWidget_files.currentWidget()
@@ -260,6 +276,7 @@ class Methods(SearchReplace):
 
     #----------------------------------------------------------------------
     def __text_can_copy__(self, *args, **kwargs):
+
         state = not self.main.actionCopy.isEnabled()
         self.main.actionCopy.setEnabled(state)
         self.main.actionCut.setEnabled(state)
@@ -269,6 +286,7 @@ class Methods(SearchReplace):
 
     #----------------------------------------------------------------------
     def __check_duplicate_file__(self, filename):
+
         filenames = [getattr(self.get_tab().widget(i), "path", None) for i in range(self.get_tab().count())]
         if filename in filenames:
             Dialogs.file_duplicated(self, filename)
@@ -279,6 +297,7 @@ class Methods(SearchReplace):
 
     #----------------------------------------------------------------------
     def load_main_config(self):
+
         if self.configIDE.config("Main", "maximized", True):
             self.showMaximized()
 
@@ -301,6 +320,7 @@ class Methods(SearchReplace):
 
     #----------------------------------------------------------------------
     def get_all_open_files(self):
+
         opens = []
         tab = self.main.tabWidget_files
         widgets = map(tab.widget, range(tab.count()))
@@ -317,6 +337,7 @@ class Methods(SearchReplace):
 
     #----------------------------------------------------------------------
     def update_recents(self, filename):
+
         if filename in self.recent_files:
             self.recent_files.remove(filename)
         self.recent_files.insert(0, filename)
@@ -327,6 +348,7 @@ class Methods(SearchReplace):
 
     #----------------------------------------------------------------------
     def update_recents_menu(self):
+
         self.main.menuRecents.clear()
         for file_ in self.recent_files:
             action = QtGui.QAction(self)
@@ -351,6 +373,7 @@ class Methods(SearchReplace):
 
     #----------------------------------------------------------------------
     def clear_recents_menu(self):
+
         self.main.menuRecents.clear()
         self.main.menuRecents.addSeparator()
         self.main.menuRecents.addAction(QtGui.QApplication.translate("Dialogs", "Clear recent files"), self.clear_recents_menu)
@@ -359,31 +382,15 @@ class Methods(SearchReplace):
 
     #----------------------------------------------------------------------
     def menu_recent_event(self, file_):
+
         def menu():
             self.open_file_from_path(filename=file_)
         return menu
 
 
-    ##----------------------------------------------------------------------
-    #def update_pinguino_paths(self):
-        #user_sdcc_bin = self.configIDE.get_path("sdcc_bin")
-        #if user_sdcc_bin: self.pinguinoAPI.P8_BIN = user_sdcc_bin
-
-        #user_gcc_bin = self.configIDE.get_path("gcc_bin")
-        #if user_gcc_bin: self.pinguinoAPI.P32_BIN = user_gcc_bin
-
-        #pinguino_source = os.path.join(os.getenv("PINGUINO_USER_PATH"), "source")
-        #if pinguino_source: self.pinguinoAPI.SOURCE_DIR = pinguino_source
-
-        #pinguino_8_libs = self.configIDE.get_path("pinguino_8_libs")
-        #if pinguino_8_libs: self.pinguinoAPI.P8_DIR = pinguino_8_libs
-
-        #pinguino_32_libs = self.configIDE.get_path("pinguino_32_libs")
-        #if pinguino_32_libs: self.pinguinoAPI.P32_DIR = pinguino_32_libs
-
-
     #----------------------------------------------------------------------
     def build_statusbar(self):
+
         #principal status
         self.status_info = QtGui.QLabel()
 
@@ -399,12 +406,6 @@ class Methods(SearchReplace):
         self.main.statusBar.addPermanentWidget(self.status_info, 1)
         self.main.statusBar.addPermanentWidget(self.status_warnnig, 2)
 
-
-
-    ##----------------------------------------------------------------------
-    #def update_namespaces(self):
-        #names = Namespaces()
-        #names.save_namespaces()
 
     #----------------------------------------------------------------------
     def write_log(self, *args, **kwargs):
@@ -430,15 +431,18 @@ class Methods(SearchReplace):
 
     #----------------------------------------------------------------------
     def statusbar_ide(self, status):
+
         self.status_info.setText(status)
 
     #----------------------------------------------------------------------
     def statusbar_warnning(self, status):
+
         self.status_warnnig.setText(status)
 
 
     #----------------------------------------------------------------------
     def set_board(self):
+
         board_name = self.configIDE.config("Board", "board", "Pinguino 2550")
         for board in self.pinguinoAPI._boards_:
             if board.name == board_name:
@@ -454,14 +458,12 @@ class Methods(SearchReplace):
 
         os.environ["PINGUINO_BOARD_ARCH"] = str(arch)
 
-
         compiler = self.configIDE.get_path("sdcc_bin"), "sdcc"
 
         if os.getenv("PINGUINO_OS_NAME") == "windows":
             ext = ".exe"
         elif os.getenv("PINGUINO_OS_NAME") == "linux":
             ext = ""
-
 
         if arch == 8:
             compiler = os.path.exists(os.path.join(self.configIDE.get_path("sdcc_bin"), "sdcc" + ext))
@@ -488,9 +490,9 @@ class Methods(SearchReplace):
             os.environ["PINGUINO_CAN_COMPILE"] = "True"
 
 
-
     #----------------------------------------------------------------------
     def get_description_board(self):
+        #FIXME
         board = self.pinguinoAPI.get_board()
         board_config = "Board: %s\n" % board.name
         board_config += "Proc: %s\n" % board.proc
@@ -506,6 +508,7 @@ class Methods(SearchReplace):
 
     #----------------------------------------------------------------------
     def get_status_board(self):
+
         self.set_board()
         board = self.pinguinoAPI.get_board()
         board_config = board.name
@@ -518,23 +521,9 @@ class Methods(SearchReplace):
         return board_config
 
 
-    ##----------------------------------------------------------------------
-    #def update_user_libs(self):
-        #libs = Librarymanager()
-
-        #all_p8 = libs.get_p8_libraries()
-        #all_p8 = map(lambda lib:lib["p8"], all_p8)
-        #self.pinguinoAPI.USER_P8_LIBS = all_p8
-
-        #all_p32 = libs.get_p32_libraries()
-        #all_p32 = map(lambda lib:lib["p32"], all_p32)
-        #self.pinguinoAPI.USER_P32_LIBS = all_p32
-
-        #self.pinguinoAPI.USER_PDL = libs.get_pdls()
-
-
     #----------------------------------------------------------------------
     def reload_file(self):
+
         editor = self.main.tabWidget_files.currentWidget()
         filename = getattr(editor, "path", False)
         file_ = codecs.open(filename, "r", "utf-8")
@@ -542,11 +531,9 @@ class Methods(SearchReplace):
         editor.text_edit.insertPlainText("".join(file_.readlines()))
         self.save_file()
 
-
-
-
     #----------------------------------------------------------------------
     def update_reserved_words(self):
+
         libinstructions = self.pinguinoAPI.read_lib(8)[1]
         name_spaces_8 = map(lambda x:x[0], libinstructions)
 
@@ -572,6 +559,7 @@ class Methods(SearchReplace):
 
     #----------------------------------------------------------------------
     def update_instaled_reserved_words(self):
+
         libinstructions = self.pinguinoAPI.read_lib(8, include_default=False)[1]
         name_spaces_8 = map(lambda x:x[0], libinstructions)
 
@@ -589,9 +577,7 @@ class Methods(SearchReplace):
                 name_spaces_32.remove(name)
                 name_spaces_commun.append(name)
 
-
         olds = pickle.load(open(reserved_filename, "r"))
-
 
         namespaces = {"arch8": list(set(name_spaces_8 + olds["arch8"])),
                       "arch32": list(set(name_spaces_32 + olds["arch32"])),
@@ -603,9 +589,9 @@ class Methods(SearchReplace):
         print("Write on %s" % reserved_filename)
 
 
-
     #----------------------------------------------------------------------
     def load_fonts(self):
+
         #fonts_dir = os.path.join(os.getenv("PINGUINO_INSTALL_PATH"), "ide", "qtgui", "resources", "fonts")
         fonts_dir = os.path.join(os.getenv("PINGUINO_DATA"), "qtgui", "resources", "fonts")
         if not os.path.exists(fonts_dir):
@@ -654,3 +640,32 @@ class Methods(SearchReplace):
             self.main.toolBar_graphical.setVisible(visible)
             self.main.toolBar_search_replace.setVisible(not visible)
             self.main.toolBar_undo_redo.setVisible(not visible)
+
+
+    #----------------------------------------------------------------------
+    def check_backup_file(self, *args, **kwargs):
+
+        editor = kwargs.get("editor", self.get_tab())
+        if editor:
+
+            filename = getattr(editor, "path")
+            filename_backup = filename + "~"
+
+            if os.path.exists(filename_backup):
+                backup_file = codecs.open(filename_backup, "r", "utf-8")
+                content = "".join(backup_file.readlines())
+                backup_file.close()
+
+                if editor.text_edit.toPlainText() == content:
+                    os.remove(filename_backup)
+                    return
+
+                reply = Dialogs.confirm_message(self, "%s\n"%filename + QtGui.QApplication.translate("Dialogs",
+                        "Pinguino IDE has found changes that were not saved during your last session.\nDo you want recover it?."))
+
+                if reply:
+                    editor.text_edit.setPlainText(content)
+                    os.remove(filename_backup)
+
+
+
